--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,3 +24,22 @@
 * {
   font-size: 0.8rem;
 }
+
+.application-container {
+  position: relative;
+}
+
+.namespace-container {
+position: fixed;
+top: 50px;
+bottom: 0;
+
+width: 300px;
+background-color: #F2F5F7;
+border-right: 1px solid #d5dde5;
+
+}
+
+.content-container {
+  margin-left: 300px;
+}
